--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ img.display {
   margin-left:auto;
   margin-right:auto;
   margin-top:0px;
+  margin-bottom:100px;
   width:200px;
   border-radius:10px;
 }
